--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "appwrite": "^14.0.1",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.1.3",
     "lucide-react": "^0.368.0",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "eslint": "^8",
