--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "appwrite": "^13.0.2" ,
+    "appwrite": "^13.0.2",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.1.5",
     "lucide-react": "^0.368.0",
+    "mongoose": "^8.3.2",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
