Suceessfully fetch and add sample data in the database

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-DATABASE_URI = mongodb+srv://niksananddeveloper:X6qa8y7oFgCMJmOt@cluster0.nrvgevm.mongodb.net
-DBNAME = "furniture"
-DBUSERNAME = "niksananddeveloper"
-DBPASSWORD = "X6qa8y7oFgCMJmOt"
-DBAUTHSOURCE = ""
-PORT = 8000
+const DATABASE_URI = 'mongodb+srv://niksananddeveloper:X6qa8y7oFgCMJmOt@cluster0.nrvgevm.mongodb.net';
+const DBNAME = 'furniture';
+const DBUSERNAME = 'niksananddeveloper';
+const DBPASSWORD = 'X6qa8y7oFgCMJmOt';
+const DBAUTHSOURCE = '';
