--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ const DATABASE_URI = 'mongodb+srv://niksananddeveloper:X6qa8y7oFgCMJmOt@cluster0
 const DBNAME = 'furniture';
 const DBUSERNAME = 'niksananddeveloper';
 const DBPASSWORD = 'X6qa8y7oFgCMJmOt';
-const DBAUTHSOURCE = '';
+const DBAUTHSOURCE = 'admin';
