--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "appwrite": "^13.0.2",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.1.5",
     "lucide-react": "^0.368.0",
     "mongoose": "^8.3.2",
     "next": "14.2.1",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
+    "react-toastify": "^10.0.5",
     "sharp": "^0.33.3",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.2"
