--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "appwrite": "^13.0.2",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
@@ -29,6 +30,7 @@
     "react-loader-spinner": "^6.1.6",
     "react-toastify": "^10.0.5",
     "sharp": "^0.33.3",
+    "styled-components": "^6.1.8",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.2"
   },
